# chess

./: .editorconfig  .gitignore  LICENSE.md  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml
.run/: Gen Baseline Profile.run.xml  Ktlint.run.xml  app.run.xml
api/: build.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/bridge/: stockfish.cpp
app/src/main/native/: CMakeLists.txt
app/src/main/native/bridge/: stockfish.cpp
app/src/main/res/drawable/: chess_piece_foreground.xml  ic_launcher_background.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
baselineprofile/: build.gradle.kts
buildSrc/src/main/java/: AppConfig.kt  BuildSettings.kt  Versions.kt
common/: build.gradle.kts
engine-common/: build.gradle.kts
engine-lc0/: .gitignore  build.gradle.kts
engine-lc0/src/main/native/: CMakeLists.txt
engine-lc0/src/main/native/bridge/: lc0.cpp
engine-stockfish/: .gitignore  build.gradle.kts
engine-stockfish/src/main/native/bridge/: stockfish.cpp
enginestockfish/src/main/native/: CMakeLists.txt
enginestockfish/src/main/native/bridge/: stockfish.cpp
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
online/: build.gradle.kts
stockfish/: build.gradle.kts
stockfish/src/main/native/bridge/: stockfish.cpp
(+448 files in other folders)
